# seal

./: .gitignore  .luaurc  CONTRIBUTING.md  Cargo.toml  HACK.luau  README.md  UPDATE.md  build.rs  regen.sh
.github/workflows/: build.yml
.seal/: guided_tour.luau
.seal/extra/csv/: column.luau  init.luau  row.luau
.seal/typedefs/: docs.json  globals.d.luau
.seal/typedefs/interop/: extern.luau  init.luau  mlua.luau  standalone.luau
.seal/typedefs/std/: args.luau  env.luau  err.luau  init.luau  json.luau  process.luau  request.luau  semver.luau  str.luau  thread.luau
.seal/typedefs/std/archive/: _types.luau  ar.luau  deb.luau  init.luau  sevenz.luau  tar.luau  zip.luau
.seal/typedefs/std/crypt/: aes.luau  hash.luau  init.luau  password.luau  rsa.luau
.seal/typedefs/std/env/: init.luau  vars.luau
.seal/typedefs/std/fs/: _types.luau  dir.luau  file.luau  filesize.luau  init.luau  path.luau
.seal/typedefs/std/io/: colors.luau  cursor.luau  format.luau  init.luau  input.luau  output.luau  prompt.luau  terminal.luau
.seal/typedefs/std/luau/: init.luau
.seal/typedefs/std/net/: init.luau  request.luau  socket.luau  websocket.luau
.seal/typedefs/std/serde/: base64.luau  base85.luau  bz2.luau  gzip.luau  hex.luau  init.luau  json.luau  lz4.luau  toml.luau  url.luau  xz.luau  yaml.luau  zlib.luau  zstd.luau
.seal/typedefs/std/terminal/: cursor.luau  init.luau
.seal/typedefs/std/time/: datetime.luau  init.luau
docs/: README.md  external_libraries.md  goals_and_nongoals.md  install.md  libraries_and_programming.md  nongoals.md  old.libraries_and_programming.md  seal_install_script.md  usage.md
docs/docscripts/: autorun.luau  fix_semver.luau  fix_stragglers.luau  old.reference.luau  reference.luau
docs/luau-book/: custom-data-types.md  index.md  variables-and-types.md
docs/reference/: README.md
docs/reference/std/: args.md  colors.md  datetime.md  env.md  err.md  init.md  json.md  process.md  request.md  semver.md  str.md  thread.md
docs/reference/std/archive/: README.md  _types.md  ar.md  deb.md  sevenz.md  tar.md  zip.md
docs/reference/std/crypt/: aes.md  hash.md  init.md  password.md  rsa.md
docs/reference/std/env/: README.md  init.md  vars.md
docs/reference/std/fs/: README.md  _types.md  dir.md  file.md  filesize.md  init.md  path.md
docs/reference/std/io/: README.md  colors.md  format.md  init.md  input.md  output.md  prompt.md
docs/reference/std/luau/: README.md  init.md
docs/reference/std/net/: init.md  request.md  websocket.md
docs/reference/std/serde/: base64.md  base85.md  bz2.md  gzip.md  hex.md  init.md  json.md  lz4.md  toml.md  url.md  xz.md  yaml.md  zlib.md  zstd.md
docs/reference/std/terminal/: README.md  cursor.md  init.md
docs/reference/std/time/: README.md  (+2 more)
docs/standard-library-reference/: args.md  colors.md  datetime.md  env.md  err.md  init.md  json.md  process.md  request.md  semver.md  str.md  thread.md
docs/standard-library-reference/crypt/: aes.md  hash.md  password.md  rsa.md
docs/standard-library-reference/fs/: dir.md  file.md  init.md  path.md
docs/standard-library-reference/io/: colors.md  format.md  init.md  input.md  output.md  prompt.md
docs/standard-library-reference/luau/: init.md
docs/standard-library-reference/net/: init.md
docs/standard-library-reference/serde/: base64.md  hex.md  init.md  json.md  toml.md  yaml.md
docs/standard-library-reference/time/: datetime.md  init.md
examples/: basic_get.luau  double_column_picker.luau  handcrafted_error_messages.luau  older_than_a_week.luau  precommit_readme.luau  show_keycodes.luau  task_runner.luau  upload_files_in_folder.luau
src/: err.rs  globals.rs  main.rs  prelude.rs  sealconfig.rs  signatures.rs  std_crypt.rs  std_env.rs  std_err.rs  std_json.rs  std_str_internal.rs  table_helpers.rs
src/compile/: bundle.luau  mod.rs  options.rs
src/interop/: externs.rs  mod.rs  standalone.rs
src/interop/externs/: ffi_api.rs  mod.rs
src/require/: mod.rs  resolver.luau
src/scripts/: globals_docgen.luau  newest_seal.luau  parse_traceback.luau  precommit.luau  seal_help.luau  tabsbad.luau
src/scripts/documentation/: .luaurc  comments.luau  components.luau  fix.luau  parse.luau
src/scripts/signature_generation/: .luaurc  apply.luau  discovery.luau  generate.luau  validate.luau
src/setup/: mod.rs  regen.luau  setup.luau
src/std_archive/: entry.rs  extract.rs  libraries.rs  mod.rs  options.rs  zip.rs
src/std_args/: args.luau  mod.rs
src/std_env/: mod.rs  vars.rs
src/std_fs/: directory_entry.rs  dirlib.rs  entry.rs  file_entry.rs  file_size.rs  filelib.rs  find.rs  mod.rs  pathlib.rs  watch.rs
src/std_io/: colors.rs  format.rs  formatter.luau  input.rs  macros.rs  mod.rs  output.rs  output_formatter.luau
src/std_io/cursor/: mod.rs
src/std_io/prompt/: mod.rs  prompt.luau
src/std_io/terminal/: events.rs  mod.rs
src/std_luau/: mod.rs
src/std_net/: http.rs  mod.rs  serve.rs  socket.rs  tls_config.rs  websocket.rs
src/std_net/http/: http_error.rs  http_request.rs  mod.rs  sender.rs  timeout_info.rs
src/std_process/: mod.rs  options.rs  stream.rs
src/std_serde/: base64.rs  base85.rs  bz2.rs  gzip.rs  hex.rs  lz4.rs  mod.rs  toml.rs  url.rs  xz.rs  yaml.rs  zlib.rs  zstd.rs
src/std_str/: mod.rs  str.luau
src/std_terminal/: actions.rs  mod.rs
src/std_terminal/actions/: mod.rs
src/std_terminal/cursor/: cursor_style.rs  mod.rs
src/std_terminal/events/: interrupt_check.luau  mod.rs
src/std_thread/: channel.rs  mod.rs  thread_spawn_options.rs
src/std_time/: datetime.rs  duration.rs  mod.rs  timespan.rs
tests/: cheese.luau  classes.luau  exportable.luau  run.luau
tests/data/: whyamilikethis.yaml
tests/luau/: .luaurc
tests/luau/globals/: globals.luau  output.luau  runtime.luau
tests/luau/std/: env.luau  err.luau
tests/rust/: calling.luau
tests/rust/crates/example/: Cargo.toml
tests/rust/crates/example/src/: lib.rs
tests/rust/crates/simple/: Cargo.toml
tests/rust/crates/simple/src/: lib.rs  table_helpers.rs
tests/rust/webviews/: view.html  webviewing.luau
tests/scripts/: seal_setup_test.luau
(+104 files in other folders)
