[package]
name = "seal"
authors = ["Dev Chrysalis Dalal <dev@deviaze.com>"]
version = "0.0.8-rc.2"
edition = "2024"

# mluau is our custom mlua fork with a greater focus on luau and luau ecosystem
# support, maintained by Midnight Frost and myself (mostly him).
[target.'cfg(not(target_os = "android"))'.dependencies]
mluau = { git = "https://github.com/mluau/mluau.git", features = ["luau", "luau-jit", "serialize", "error-send"] }

[target.'cfg(target_os = "android")'.dependencies]
# luau jit (ncg) compilation is not available on android
mluau = { git = "https://github.com/mluau/mluau.git", features = ["luau", "serialize", "error-send"] }

[dependencies]
regex = "1.11.1"
# needed for seal setup (really useful!)
include_dir = { version = "0.7.4" }
# only decent non-tokio non-async simple http request lib
ureq = { version = "3.0.11", features = ["json", "rustls", "gzip"] }
# faster than std::mpsc, needed for @std/thread
crossbeam-channel = { version = "0.5.15" }
# serde_json blows up when reading jsonc so we use lenient instead
# feature "arbitrary_precision" causes headaches, we can just provide bigint/bigdecimal bindings instead
serde_json_lenient = { version = "0.2.4", features = ["preserve_order"] }
base64 = { version = "0.22.1" }
# serde_yaml is deprecated and unmaintained so we use serde_yml instead
serde_yml = "0.0.13"
# toml = "0.5.9"
toml = "1.1"
serde-xml-rs = "0.8.2"
hex = "0.4.3"
lz4_flex = { version = "0.13" }
flate2 = "1.0"
urlencoding = "2.1.3"
zstd = "0.13.3"
copy_dir = "0.1.3"
# we should switch to a more maintained alternative when possible, 
# but as long as ring receives security updates it's not a huge priority
ring = "0.17.14"
rsa = "0.9.8"
rand = "0.10.1"
# rsa relies on an older version of rng::rand_core but other deps need the new version of rng::rand_core
# updating rand removed the compatible rand_core so we need to manually bring in the old version
rand_core = "0.6"
# simple wrapper lib, might want to switch to a more frequently updated one?
simple_crypt = "0.2.3"
# @std/str lib
unicode-segmentation = "1.12.0"
# used for very fast string pattern searches (str.split*)
aho-corasick = "1.1.3"
# necessary to loop over graphemes without storing the whole string into memory, 
# unicode-segmentation's iterators are literally allergic to being stored in a struct
unicode_reader = "1.0.2"
# needed for "cutest luau runtime" claim in README.md
# very good for providing random-ish human readable/rememberable names
petname = { version = "3.0.0", features = ["default-rng", "default-words"], default-features = false }
# needed to handle sigabrts on *nix (see main.rs and err.rs)
libc = "0.2.174"
# fs.watch
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
# based datetime library and much better than chrono
jiff = "0.2.15"
# manual terminal stuff and manual astrick password
crossterm = "0.29.0"
# determines if we should fallback to stdin handling in @std/io/input and @std/cli
# as well as what happens to output during errors/panics
atty = "0.2.14"
# sane cli input handling in @std/cli
rustyline = "18.0.0"
# hidden password handling so i dont have to implement it myself with crossterm
rpassword = "7.4.0"
libloading = "0.9.0"
# format.hexdump and dp
pretty-hex = "0.4.1"
# websockets
tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5.7"
# needed for .env support in @std/env/vars
dotenvy = "0.15.7"

[profile.dev.package.num-bigint-dig]
opt-level = 3 # otherwise rsa keygen takes forever

[workspace]
members = [
    "tests/rust/crates/example",
]
