[package]
name = "extern-example"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib tells Cargo to produce a C‑compatible dynamic library
crate-type = ["cdylib"]

[dependencies]
# we need to bind to seal's specific version of the C stack API
# seal = { git = "https://github.com/seal-runtime/sealbindings", package = "sealbindings" }
# seal = { path = "/home/deviaze/Repositories/sealbindings", package = "sealbindings" }
sealbindings = { path = "/home/deviaze/Repositories/sealbindings" }
libloading = "0.9.0"
libc = "0.2"
bstr = "1.12.1"
uuid = { version = "1.19.0", features = ["v4"] }