[package]
name = "extern-example"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib tells Cargo to produce a C‑compatible dynamic library
crate-type = ["cdylib"]

[dependencies]
# we need to bind to seal's specific version of the C stack API
sealbindings = { git = "https://github.com/seal-runtime/sealbindings" }
uuid = { version = "1.19.0", features = ["v4"] }