[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib tells Cargo to produce a C‑compatible dynamic library
crate-type = ["cdylib"]

[dependencies]
mluau = { git = "https://github.com/mluau/mluau.git", features = ["luau", "serialize", "error-send", "unsafe-ffi"] , branch = "ffi" }
# mluau = { path = "/home/deviaze/Repositories/mluau-ffi", features = ["luau", "serialize", "error-send", "unsafe-ffi"] }

libc = "0.2"